make change verify token
